--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 <li><i class="fas fa-handshake"></i> عندما ننصح الآخرين يجب أن نستخدم أسلوباً لطيفاً وغير قاسي، إلا إذا كنا قد تلقينا النصيحة عدة مرات ولم يتغيروا، مع أنه يجب علينا أن نستخدم أسلوباً غير مفرط.</li>
             </ul>
         </div>
+        <p>© 2025 Abdul Malik. All right reserved</p>
     </div>
 </body>
 </html>
