--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             text-align: center;
             margin: 20px;
             padding: 20px;
-            background: url('background.jpg') no-repeat center center fixed;
+            background: url('herat_mosque.jpg') no-repeat center center fixed;
             background-size: cover;
         }
         .container {
