--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
+    /* kode CSS lainnya */
+    .copyright {
+        margin-top: 20px;
+        text-align: center;
+        color: white;
+        font-size: 14px;
+        direction: ltr; /* tambahkan properti ini */
+    }
         body {
             font-family: Arial, sans-serif;
             direction: rtl;
