--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
             </ul>
         </div>
     </div>
-    <div class="copyright">© 2025 Abdul Malik. All rights reserved</div>
+    <div class="copyright">
+        &copy; 2025 Abdul Malik. All rights reserved.
+    </div>
 </body>
 </html>
