--- a/index.html
+++ b/index.html
@@ -49,10 +49,14 @@
             text-align: right;
         }
         .copyright {
-            margin-top: 20px;
-            text-align: center;
+            background: black;
             color: white;
+            padding: 10px;
+            border-radius: 5px;
+            margin-top: 20px;
             font-size: 14px;
+            max-width: 600px;
+            margin: auto;
         }
     </style>
 </head>
